--- a/environment.yml
+++ b/environment.yml
@@ -4,46 +4,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - blas=1.0=mkl
-  - ca-certificates=2019.11.27=0
-  - certifi=2019.11.28=py37_0
-  - cycler=0.10.0=py37_0
-  - freetype=2.9.1=ha9979f8_1
-  - icc_rt=2019.0.0=h0cc432a_1
-  - icu=58.2=vc14hc45fdbb_0
-  - intel-openmp=2019.5=281
-  - jpeg=9b=vc14h4d7706e_1
-  - kiwisolver=1.1.0=py37ha925a31_0
-  - libpng=1.6.37=h2a8f88b_0
-  - matplotlib=3.1.1=py37hc8f65d3_0
-  - mkl=2019.5=281
-  - mkl-service=2.3.0=py37hb782905_0
-  - mkl_fft=1.0.15=py37h14836fe_0
-  - mkl_random=1.1.0=py37h675688f_0
-  - numpy=1.17.4=py37h4320e6b_0
-  - numpy-base=1.17.4=py37hc3f5095_0
-  - openssl=1.1.1=he774522_0
-  - pandas=0.25.3=py37ha925a31_0
-  - patsy=0.5.1=py37_0
-  - pip=19.3.1=py37_0
-  - pyparsing=2.4.6=py_0
-  - pyqt=5.9.2=py37ha878b3d_0
-  - python=3.7.6=h60c2a47_2
-  - python-dateutil=2.8.1=py_0
-  - pytz=2019.3=py_0
-  - qt=5.9.7=vc14h73c81de_0
-  - scipy=1.3.2=py37h29ff71c_0
-  - seaborn=0.9.0=pyh91ea838_1
-  - setuptools=44.0.0=py37_0
-  - sip=4.19.13=py37ha925a31_0
-  - six=1.13.0=py37_0
-  - sqlite=3.30.1=he774522_0
-  - statsmodels=0.10.1=py37h8c2d366_0
-  - tornado=6.0.3=py37he774522_0
-  - vc=14.1=h0510ff6_4
-  - vs2015_runtime=14.16.27012=hf0eaf9b_1
-  - wheel=0.33.6=py37_0
-  - wincertstore=0.2=py37_0
-  - zlib=1.2.11=vc14h1cdd9ab_1
-prefix: C:\Users\Ingmar\Anaconda3\envs\noaaplotter
+  - matplotlib=3.1.1
+  - numpy=1.17.4
+  - pandas=0.25.3
+  - python=3.7
 
