--- a/environment.yml
+++ b/environment.yml
@@ -4,8 +4,10 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - matplotlib=3.1.1
-  - numpy=1.17.4
-  - pandas=0.25.3
-  - python=3.7
-
+  - matplotlib
+  - numpy
+  - pandas
+  - python
+  - requests
+  - joblib
+  - tqdm
