--- a/environment.yml
+++ b/environment.yml
@@ -1,14 +1,13 @@
 name: noaaplotter
 channels:
-  - anaconda
   - conda-forge
   - defaults
 dependencies:
-  - matplotlib
-  - numpy
-  - pandas
-  - python
+  - matplotlib>=3.9
+  - numpy>=2.2
+  - pandas>=2.2
+  - python>=3.10
   - requests
-  - joblib
-  - tqdm
-  - geemap
+  - joblib>=1.4
+  - tqdm>=4.67
+  - geemap>=0.35
