--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "pyarrow>=18.1.0",
     "box>=0.1.5",
     "setuptools>=75.6.0",
+    "narwhals>=1.20.1",
 ]
 
 [tool.setuptools.packages.find]
